(ENHANCEMENT) - 30-game-prototype
https://github.com/kevinboogaard/Sports_World-Ball_Pit/issues/59
Cleaned a bit of the project files.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
 			"always"
 		],
         "no-undef": 0,
-        "no-console": 0
+        "no-console": 0,
+        "valid-jsdoc": "error"
     }
 }
