--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
-  "name": "source",
-  "version": "1.0.0",
-  "description": "Introduction to the github.",
+  "name": "ballpit",
+  "version": "0.7.5",
+  "description": "Sports World; Ball Pit is a puzzle game made for Cool Games. This project is for the 'Proeve van Bekwaamheid' of Mediacollege Amsterdam. This game is being developed by: Alex Antonides, Jennifer Versteeg, Frederiqué Gesbert, Kevin Boogaard, Lorenzo Koning, Sabrina Rahali El Bairi and Susan van der Puijl.",
   "main": "index.js",
   "dependencies": {
     "eslint": "^3.19.0",
-    "mr-doc": "^3.2.1",
     "phaser": "^2.6.2",
     "uglify-js": "^2.8.22"
-  },
-  "devDependencies": {
-    "mr-doc-theme-cayman": "^1.4.1"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -25,5 +18,5 @@
   "bugs": {
     "url": "https://github.com/kevinboogaard/Sports_World-Ball_Pit/issues"
   },
-  "homepage": "https://github.com/kevinboogaard/Sports_World-Ball_Pit#readme"
+  "homepage": "http://www.alex-antonides.com/pvb"
 }
