(FEATURE) - 38-game-backend
https://github.com/kevinboogaard/Sports_World-Ball_Pit/issues/68
Fixed issues and added get/post highscore to the game.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 node_modules/
 advancedgames.ballpit.settings/debugging/debugsettings.js
 advancedgames.ballpit.settings/configuration/settings.js
+advancedgames.ballpit.settings/environments/
