(ENHANCEMENT) - 40-game-prototype
https://github.com/kevinboogaard/Sports_World-Ball_Pit/issues/70
Environment changes.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=185.182.56.31
-DB_DATABASE=alexabt143_pvb
-DB_USERNAME=alexabt143_pvb
-DB_PASSWORD=kEhHvZQG7b
+DB_HOST=localhost
+DB_DATABASE=advancedgames_highscores
+DB_USERNAME=root
+DB_PASSWORD=
